# Life-Cycle-Prime-Time

./: .aionly.yml  .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .ragignore  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  REMARK.md  TRP_MODEL_OVERVIEW.md  _toc.yml  environment.yml  myst-setup.sh  myst.yml  noxfile.py  pyproject.toml  report_todo.md  reproduce.sh  reproduce_min.sh  todo.md
.github/: CONTRIBUTING.md
.github/workflows/: binder.yml  cd.yml  ci.yml  deploy.yml
_resources/: emacs-prettify-symbols
binder/: apt.txt  environment.yml  postBuild
config/: econark-shortcuts.sty  econark.yml  local-shortcuts.sty  local-shortcuts.yml  markdown.yml  myst.yml  rag_config.yaml
content/: MPC-at-cusp.ipynb  life-cycle-prime-time.docx  life-cycle-prime-time.md  lit_review.docx  lit_review.md  parameters.tex  references.bib  report-bad.md  report.html  report.md  results.md  synopsis.docx  synopsis.md
content/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
content/life-cycle-prime-time_pdf_tex/: arxiv.sty  life-cycle-prime-time.tex  main.bib
content/lit_review_pdf_tex/: lit_review.tex  main.bib
content/report_pdf_tex/: arxiv.sty  main.bib  report.tex
content/synopsis_pdf_tex/: synopsis.tex
docs/: MNW_edit_comments.txt  conf.py  index.md  life-cycle-prime-time.docx  life-cycle-prime-time.md  lit_review.docx  lit_review.md  lit_review.xlsx  parameters.tex  references.bib  results.md  solution_appendix.md  synopsis.docx  synopsis.md  synopsis.tex
docs/cuts/: 20240515-1915h.md
docs/life-cycle-prime-time_pdf_tex/: arxiv.sty  life-cycle-prime-time.tex  main.bib
docs/lit_review_pdf_tex/: arxiv.sty  lit_review.tex  main.bib
docs/manual_latex_edit_version/: JoRcoverLetter.tex  life-cycle-prime-time.tex  main.bib
docs/synopsis_pdf_tex/: synopsis.tex
docs/tables/: parameters.tex
docs/tables/TRP/: Portfolio_estimate_results.csv  WarmGlowPortfolio_estimate_results.csv  WealthPortfolio_estimate_results.csv
docs/tables/min/: IndShockSub(Labor)Market_estimate_results.csv  IndShockSub(Stock)(Labor)Market_estimate_results.csv  IndShockSub(Stock)Market_estimate_results.csv  IndShock_estimate_results.csv  PortfolioSub(Labor)Market_estimate_results.csv  PortfolioSub(Stock)(Labor)Market_estimate_results.csv  PortfolioSub(Stock)Market_estimate_results.csv  Portfolio_estimate_results.csv  WarmGlowPortfolioSub(Labor)Market_estimate_results.csv  WarmGlowPortfolioSub(Stock)(Labor)Market_estimate_results.csv  WarmGlowPortfolioSub(Stock)Market_estimate_results.csv  WarmGlowPortfolio_estimate_results.csv  WarmGlowSub(Labor)Market_estimate_results.csv  WarmGlowSub(Stock)(Labor)Market_estimate_results.csv  (+7 more)
reproduce/: README.md  capture_system_info.py  check_dependencies.sh  reproduce_utils.sh
reproduce/benchmarks/: README.md  benchmark_results.sh  schema.json
reproduce/docker/: setup.sh
resources/: emacs-prettify-symbols  emacs-prettify-symbols-tex_add-local-symbols
src/: MPC-at-cusp.ipynb  README.md  do_all.py  run_all.py  run_all_msm.py  tests.py
src/data/: Cagetti2003.csv
src/estimark/: __init__.py  _version.pyi  agents.py  estimation.py  income_process.py  options.py  parameters.py  scf.py  snp.py
src/msm_notebooks/: FinAssets_Cov.ipynb  MSM Full Bequest model.ipynb  MSM LCIM model.ipynb  MSM TRP model.ipynb  MSM Term Bequest model.ipynb  MSM Warm Glow Bequest model.ipynb  NetWorth_Cov.ipynb  savres.ipynb
src/notebooks/: IndShock.ipynb  Model_Comparisons.ipynb  Portfolio.ipynb  SCF_notebook.ipynb  WarmGlow.ipynb  WarmGlowPortfolio.ipynb  WealthPortfolio.ipynb  msm.ipynb  parse_tables.ipynb  testing_notebook.ipynb
src/stata/: AppendDataUsingSCF1992_2007.do  ReadMe.txt  SelectVarsUsingSCF1992.do  SelectVarsUsingSCF1995.do  SelectVarsUsingSCF1998.do  SelectVarsUsingSCF2001.do  SelectVarsUsingSCF2004.do  SelectVarsUsingSCF2007.do  WIRatioPopulation.do  doAll.do
tests/: test_package.py
tools/: create_local-shortcuts_from_math-macros.py  create_math-macros.py  local-shortcuts.sty  local-shortcuts.yml  math-macros.yml
(+115 files in other folders)
